@@ -22,7 +22,8 @@
     $ 1.4
       % Version 25
       _ 2016-xx-xx
-      * Close #120 Adding an ANR catch lib.
+      * #99 Handle new device created when offline
+      * Close #120 Adding an ANR catch lib
       * Close #105 statistics of server exchange are back
       * Correct widget selector for DT_HVACFan
       * Sort sensor and commands at sync by sensor_id or command_id for 0.5
